# volkit

./: .envrc  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: VktAddTarget.cmake  VktHandleOptions.cmake  VktUsePackage.cmake
cmake/modules/: FindGLEW.cmake  FindVirvo.cmake
docs/: Doxyfile
docs/man/man1/: install.sh  vkt-render.1  vkt.1
include/c/vkt/: Aggregates.h  Arithmetic.h  Array3D.h  ComputeMotionVectors.h  Copy.h  CudaContext.h  CudaTimer.h  Decompose.h  ExecutionPolicy.h  Fill.h  Flip.h  HierarchicalVolume.h  InputStream.h  LookupTable.h  ManagedBuffer.h  ManagedResource.h  Memory.h  MotionVectors.h  RawFile.h  Render.h  Rotate.h  Scale.h  Scan.h  StructuredVolume.h  Timer.h  Transform.h  VirvoFile.h  VolumeFile.h  Voxel.h  common.h  forward.h  linalg.h
include/cpp/vkt/: Aggregates.hpp  Arithmetic.hpp  Array1D.hpp  Array2D.hpp  Array3D.hpp  Copy.hpp  Crop.hpp  CudaTimer.hpp  Decompose.hpp  ExecutionPolicy.hpp  FLASHFile.hpp  Fill.hpp  Filter.hpp  Flip.hpp  HierarchicalVolume.hpp  Histogram.hpp  InputStream.hpp  LookupTable.hpp  ManagedBuffer.hpp  ManagedResource.hpp  Memory.hpp  NiftiFile.hpp  OutputStream.hpp  RawFile.hpp  Render.hpp  Resample.hpp  Rotate.hpp  Scale.hpp  Scan.hpp  StructuredVolume.hpp  Transform.hpp  VirvoFile.hpp  VolumeFile.hpp  Voxel.hpp  common.hpp  forward.hpp  linalg.hpp
include/shared/vkt/: Compiler.h  System.h
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/examples/: AMR.cpp  Aggregates.c  Aggregates.cpp  Aggregates.py  Animation.cpp  Arithmetic.c  Arithmetic.cpp  Arithmetic.py  CLAHE.cpp  CMakeLists.txt  CoreAlgorithms.c  Decompose.c  Decompose.cpp  Decompose.py  ExecutionPolicy.c  ExecutionPolicy.cpp  FileIO.c  FileIO.cpp  FileIO.py  FileIO.sh  Histogram.cpp  Rotate.c  Rotate.cpp  Rotate.py  Scan.c  Scan.cpp  Scan.py  TimeSteps.cpp  common.h
src/vkt/: Aggregates.cpp  Aggregates_cuda.hpp  Aggregates_serial.hpp  Arithmetic.cpp  Arithmetic_cuda.cu  Arithmetic_cuda.hpp  Arithmetic_serial.hpp  ArrayView1D.hpp  ArrayView2D.hpp  ArrayView3D.hpp  CMakeLists.txt  Callable.cpp  Callable.hpp  ColorFormatInfo.hpp  Copy.cpp  Copy_cuda.cu  Copy_cuda.hpp  Copy_serial.hpp  Crop.cpp  Crop_cuda.cu  Crop_cuda.hpp  Crop_serial.hpp  CudaTimer.cpp  CudaTimer.hpp  DataFormatInfo.hpp  DataSource_impl.hpp  Decompose.cpp  Decompose_cuda.cu  Decompose_cuda.hpp  Decompose_serial.hpp  ExecutionPolicy.cpp  FLASHFile.cpp  Fill.cpp  Fill_cuda.cu  Fill_cuda.hpp  Fill_serial.hpp  Filter.cpp  FilterView.hpp  Filter_cuda.hpp  Filter_serial.hpp  (+69 more)
